tests/negative/UnusedOperatorDef.juvix
module UnusedOperatorDef;
  syntax infixl 12 + ;
end ;
